--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,8 +9,8 @@ permissions:
   contents: read
 
 jobs:
-  terraform:
-    name: 'Terraform'
+  plan:
+    name: 'Terraform plan'
     runs-on: self-hosted
     environment: production
 
@@ -27,8 +27,6 @@ jobs:
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
@@ -45,6 +43,21 @@ jobs:
         TF_VAR_name: mariametf
       run: terraform plan -input=false -out plan.out
 
+  apply:
+    name: 'Terraform apply'
+    runs-on: self-hosted
+    environment: production
+    needs: "plan"
+  
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+        run:
+           shell: bash
+
+    steps:
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+    
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
