--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,7 +42,13 @@ jobs:
       env:
         TF_VAR_name: mariametf
       run: terraform plan -input=false -out plan.out
-
+      
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: plan.out
+        path: plan.out
+        retention-days: 5
   apply:
     name: 'Terraform apply'
     runs-on: self-hosted
@@ -55,6 +61,11 @@ jobs:
            shell: bash
 
     steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: plan.out
+  
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
     
