--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,7 +41,7 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       env:
-        TF_VAR_name: mariametf
+        TF_VAR_name: ${{vars.TF_VAR_name}}
       run: terraform plan -input=false -out plan.out
 
     - name: Plan summary
