--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,6 +73,13 @@ jobs:
   
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
+
+    - name: Tests
+      env:
+        AA_STEP_VAR: "this is a step env var"
+      run: |
+        echo "Github Env variable: ${{vars.TF_VAR_name}}"
+        export
     
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
